lab2 - simple form

--- a/lab2-simple-form/app.yaml
+++ b/lab2-simple-form/app.yaml
@@ -5,9 +5,16 @@ api_version: 1
 threadsafe: yes
 
 handlers:
+- url: /images
+  static_dir: images
+
 - url: /favicon\.ico
   static_files: favicon.ico
   upload: favicon\.ico
+
+- url: /style\.css
+  static_files: style.css
+  upload: style\.css
 
 - url: .*
   script: main.app
